--- a/style.css
+++ b/style.css
@@ -73,11 +73,6 @@
     font-size: 16px;
 }
 
-.bottom {
-    position: absolute;
-    bottom: 0;
-}
-
 .text {
     padding-bottom: 5px;
     cursor: pointer;
@@ -148,6 +143,7 @@ svg {
 .post {
     display: flex;
     margin: 20px 0px;
+    width: 440px;
     flex-direction: column;
     border-bottom: 1px solid rgb(255, 239, 228);
 }
@@ -265,19 +261,19 @@ svg {
 }
 
 .pic {
-    height: 500px;
+    width: 440px;
+    height: auto;
 }
 
 .postbottom {
     margin: 5px 0px;
-    display: flex;
     flex-direction: column;
     align-items: left;
 }
 
 .bottom_menu {
     display: grid;
-    grid-template-columns: 0.1fr 0.17fr 0.17fr 1.5fr;
+    grid-template-columns: 0.13fr 0.17fr 1.5fr;
     align-items: center;
     text-align: right;
     margin: 0px 5px;
@@ -378,6 +374,9 @@ svg {
     .postbottom {
         width: 100vw;
     }
+    .post{
+        width: 100vw;
+    }
 
     .pic {
         width: 100vw;
@@ -421,7 +420,7 @@ svg {
         display: grid;
         align-items: center;
         text-align: left;
-        grid-template-columns: 2fr 0.3fr 0.3fr;
+        grid-template-columns: 2fr 0.2fr;
         width: 100vw;
         z-index: 100;
     }
