--- a/search.css
+++ b/search.css
@@ -135,7 +135,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+    /* height: 100vh; */
 }
 
 .posts::-webkit-scrollbar {
