--- a/style.css
+++ b/style.css
@@ -298,6 +298,7 @@ button {
     display: none;
     border: 1px solid rgb(255, 239, 228);
     border-radius: 10px;
+    margin: 5px 0px;
     padding: 10px;
     height: 120px;
     overflow-y: scroll;
