--- a/search.css
+++ b/search.css
@@ -135,6 +135,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 100vh;
     /* height: 100vh; */
 }
 
@@ -142,11 +143,24 @@
     display: none;
 }
 
+
+.profiles::-webkit-scrollbar{
+    display: none;
+}
 .posts {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     width: 420px;
+    height: 100vh;
     overflow-y: scroll;
+    overflow-x: hidden;
+    border-radius: 8px;
+}
+.profiles{
+    /* display: none; */
+    width: 420px;
+    overflow-y: scroll;
+    height: 100vh;
     overflow-x: hidden;
     border-radius: 8px;
 }
@@ -158,9 +172,9 @@
 .posts img:hover {
     filter: blur(3px);
 }
-
-.menu2 .suggestions{
-    padding: 3px;
+.suggestions{
+    margin: 8px;
+    padding: 5px;
     background-color: rgb(246, 246, 246);
     border-radius: 10px;
 }
@@ -277,6 +291,15 @@ input {
     .posts {
         width: 100%;
         height: 100vh;
+        padding: 5px;
+        margin-top: 60px;
+        padding-bottom: 70px;
+        border-radius: 0;
+    }
+    .profiles {
+        width: 100%;
+        height: 100vh;
+        padding: 5px;
         margin-top: 60px;
         padding-bottom: 70px;
         border-radius: 0;
@@ -287,5 +310,6 @@ input {
         max-width: 100%;
         height: auto;
     }
+    
 
 }
