--- a/search.css
+++ b/search.css
@@ -164,7 +164,7 @@
     /* display: none; */
     width: 420px;
     overflow-y: scroll;
-    height: 100vh;
+    /* height: 100vh; */
     overflow-x: hidden;
     border-radius: 8px;
 }
@@ -201,12 +201,10 @@ input {
     background-color: rgb(229, 229, 230);
     padding-left: 18px;
     font-size: 14px;
-    margin: 50px;
+    margin: 40px 0px;
 }
 
-#input-search {
-    display: none;
-}
+
 
 .menu-bottom {
     display: none;
@@ -291,7 +289,14 @@ input {
         margin: 10px;
         border-radius: 12px;
     }
-
+    #search-button{
+        position: fixed;
+        top: 0;
+        right: 0;
+        height: 35px;
+        margin: 10px;
+        border-radius: 12px;
+    }
     .posts {
         width: 100%;
         height: 100vh;
